Fix text overflow in elements

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -2,6 +2,7 @@
 
 * {
     margin: 0;
+    word-break: break-all;
 }
 
 body{
